[gd_scene load_steps=4 format=3 uid="uid://babcosdrwkbg2"]

[ext_resource type="Script" path="res://message.gd" id="1_a2jqv"]
[ext_resource type="Texture2D" uid="uid://cf17gyq5ap8y0" path="res://assets/message.png" id="1_iq2c2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5k5x"]
size = Vector2(28, 20)

[node name="Message" type="Node2D"]
script = ExtResource("1_a2jqv")

[node name="MessageSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_iq2c2")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_k5k5x")

[node name="MessageText" type="RichTextLabel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -33.0
offset_right = 155.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center][/center]"
fit_content = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
